--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,19 @@ version = "0.1.0"
 
 [workspace.dependencies]
 infinitier_core = { path = "src/core" }
+
+log = "0.4"
+
+
+[profile.dev]
+debug = "line-tables-only"
+
+# Set the settings for all dependencies (but not this crate itself or any workspace member).
+# This includes build dependencies.
+# Level range is from 0 (default for dev) to 3 (default for release)
+[profile.dev.package."*"]
+opt-level = 2
+
+# Set the settings for build scripts and proc-macros.
+[profile.dev.build-override]
+opt-level = 2
