--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ version = "0.1.0"
 [workspace.dependencies]
 infinitier_core = { path = "src/core" }
 
+encoding_rs = "0.8"
+insta = { version = "1", features = ["json", "redactions", "filters"] }
 log = "0.4"
+serde = { version = "1", features = ["derive"] }
 
 
 [profile.dev]
