--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -4,4 +4,8 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-encoding_rs = "0.8"
+encoding_rs =  { workspace = true }
+serde = { workspace = true }
+
+[dev-dependencies]
+insta = { workspace = true }
