--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 encoding_rs =  { workspace = true }
 itertools = { workspace = true }
+log = { workspace = true }
 serde = { workspace = true }
 
 [dev-dependencies]
