--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+bitflags = { workspace = true }
 encoding_rs =  { workspace = true }
 flate2 = { workspace = true }
 itertools = { workspace = true }
