--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.1.0"
 [workspace.dependencies]
 infinitier_core = { path = "src/core" }
 
-bitflags = "2"
+bitflags = { version = "2", features = ["serde"] }
 encoding_rs = "0.8"
 flate2 = "1"
 insta = { version = "1", features = ["json", "redactions", "filters"] }
