--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 bitflags = { workspace = true }
 encoding_rs =  { workspace = true }
 flate2 = { workspace = true }
+image = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
