--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ infinitier_core = { path = "src/core" }
 bitflags = { version = "2", features = ["serde"] }
 encoding_rs = "0.8"
 flate2 = "1"
-image = "0.24"
+image = { version = "0.25", default-features = false, features = ["png"] } # "0.24"
 insta = { version = "1", features = ["json", "redactions", "filters"] }
 itertools = "0.14"
 log = "0.4"
