Add bam image test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ insta = { version = "1", features = ["json", "redactions", "filters"] }
 itertools = "0.14"
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
+tempfile = "3"
 
 
 [profile.dev]
