Add mos dxt5 reader stub

--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -12,6 +12,8 @@ itertools = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
 
+texture2ddecoder = "0.1"
+
 [dev-dependencies]
 insta = { workspace = true }
 tempfile = { workspace = true }
