Fix prvz dxt1 decoding of alpha channel

--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -11,10 +11,7 @@ image = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
-
-bcdec_rs = "0.2.0"
-dds = "0.2.0"
-texture2ddecoder = "0.1"
+texture2ddecoder = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
