--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ log = "0.4"
 serde = { version = "1", features = ["derive"] }
 tempfile = "3"
 
+# This is used to decode DDS image content into the PVR files.
+# We can switch to image-extras when this PR is merged: https://github.com/image-rs/image-extras/pull/16
+texture2ddecoder = "0.1"
+
 
 [profile.dev]
 debug = "line-tables-only"
